--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta charset="utf-8" />
+    <title>Verkout</title>
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+
+    <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link
+      href="//fonts.googleapis.com/css?family=Raleway:400,300,600"
+      rel="stylesheet"
+      type="text/css"
+    />
+
+    <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/skeleton.css" />
+    <link rel="stylesheet" href="css/custom.css" />
+
+    <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="icon" type="image/png" href="img/favicon.png" />
+  </head>
+  <body>
+    <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+    <div class="section hero">
+      <div class="container">
+        <div class="row">
+          <div class="column">
+            <h4 class="padded">
+              Verkout
+            </h4>
+            <h2 class="padded">
+              We make everyday fitness<br />approachable and fun.
+            </h2>
+            <h4>
+              - COMING SOON -
+            </h4>
+            <p>
+              Please hold. Our small team in Austin, TX is building something
+              great.
+            </p>
+            <a target="_" href="https://instagram.com/verkoutapp"
+              ><img width="32" src="img/icon-ig.png"
+            /></a>
+            <a target="_" href="https://twitter.com/verkoutapp"
+              ><img width="32" src="img/icon-twitter.png"
+            /></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  </body>
+</html>
