Header title tweak.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
-    <title>Verkout: the fitness inspiration platform</title>
+    <title>Verkout: THE destination for fitness inspiration</title>
     <meta name="description" content="" />
     <meta name="author" content="" />
 
