--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
-    <title>Verkout: THE destination for fitness inspiration</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Verkout: the workouts of Instagram</title>
+    <meta name="description" content="Verkout: the workouts of Instagram" />
+    <meta name="author" content="Verkout" />
 
     <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -20,78 +21,147 @@
       type="text/css"
     />
 
-    <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/skeleton.css" />
     <style>
-      * {
-        text-align: center;
-        background-color: #f2d308;
-        color: #3d3d3d;
+      /* html,
+      body,
+      div,
+      span,
+      a,
+      p,
+      ul,
+      li,
+      h1,
+      code,
+      nav {
+        margin: 0;
+        border: 0;
+        padding: 0;
+        box-sizing: inherit;
+        font: inherit;
+        text-decoration: inherit;
+        text-align: inherit;
+        color: inherit;
+        background: transparent;
+      } */
+      /*pass window height (w/o scroll bars) down to react app, note can't use vh becasue that
+      includes scroll bars and mobile browser footer, etc so doesn't give viewable area*/
+      /* html,
+      body {
+        height: 100%;
+      }
+      html {
+        background-color: rgb(0, 120, 0);
+      }
+      #root {
+        background-color: #f0f0f0;
+        min-height: 100%;
+      } */
+
+      /*required for IE/Edge to be compatible with left:50vw & transform:translate(-50%, 0),
+      otherwise there is a phantom div on the right side of the screen (from the left:50vw),
+      that the window will scroll to. Note the left:50vw and transform is used to center content
+      horizaontally based on vw to prevent content jump when vertical scroll bar show/hide.*/
+      body {
+        overflow-x: hidden;
       }
 
+      /* Verkout site styles */
+
+      html,
       body {
-        padding-top: 3em;
+        height: 100%;
+        padding-top: 1em;
+        background-color: #000;
+        background-color: #f2d308;
+      }
+
+      #root {
+        background-color: #f2d308;
+        /* background-color: #000; */
+        color: #3d3d3d;
+        /* color: #3d3d3d; */
+        min-height: 100%;
+        text-align: center;
       }
 
       .padded {
-        padding: 1em 0em 2em 0em;
+        padding: 4rem 0rem 1rem 0rem;
       }
 
       .centered-box {
         margin-left: auto;
         margin-right: auto;
-        width: 24em;
+        width: 32em;
       }
 
       .constrained-header {
         text-align: left;
       }
+
+      .subtitle {
+        font-size: 3rem;
+      }
+
+      .bullets {
+        font-size: 2.5rem;
+      }
+
+      h2 {
+        text-align: left;
+      }
     </style>
 
-    <!-- Favicon
+    <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/skeleton.css" />
+
+    <!-- start favicon -->
     <link rel="icon" type="image/png" href="img/favicon.png" />
+
+    <!-- end favicon -->
+
+    <!-- Start Single Page Apps for GitHub Pages -->
+    <script type="text/javascript">
+      // Single Page Apps for GitHub Pages
+      // https://github.com/rafrex/spa-github-pages
+      // Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
+      // ----------------------------------------------------------------------
+      // This script checks to see if a redirect is present in the query string
+      // and converts it back into the correct url and adds it to the
+      // browser's history using window.history.replaceState(...),
+      // which won't cause the browser to attempt to load the new url.
+      // When the single page app is loaded further down in this file,
+      // the correct url will be waiting in the browser's history for
+      // the single page app to route accordingly.
+      (function (l) {
+        if (l.search) {
+          var q = {};
+          l.search
+            .slice(1)
+            .split("&")
+            .forEach(function (v) {
+              var a = v.split("=");
+              q[a[0]] = a.slice(1).join("=").replace(/~and~/g, "&");
+            });
+          if (q.p !== undefined) {
+            window.history.replaceState(
+              null,
+              null,
+              l.pathname.slice(0, -1) +
+                (q.p || "") +
+                (q.q ? "?" + q.q : "") +
+                l.hash
+            );
+          }
+        }
+      })(window.location);
+    </script>
+    <!-- End SPA for Github Pages -->
   </head>
   <body>
-    <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-    <div class="section hero">
-      <div class="container">
-        <div class="row">
-          <div class="column">
-            <div class="centered-box">
-              <h4 class="constrained-header">
-                If you are<br />
-                starting your fitness journey,<br />
-                starting <b>again</b>, <br />
-                or have hit a plateau...
-              </h4>
-            </div>
-            <h2 class="padded">
-              Verkout gets you going.
-            </h2>
-            <h4>
-              - COMING SOON -
-            </h4>
-            <p>
-              Please hold. Our small team in Austin, TX is building something
-              great.
-            </p>
-            <a target="_" href="https://instagram.com/verkoutapp"
-              ><img width="32" src="img/icon-ig.png"
-            /></a>
-            <a target="_" href="https://twitter.com/verkoutapp"
-              ><img width="32" src="img/icon-twitter.png"
-            /></a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <div id="root"></div>
+    <!-- single page app in bundle.js -->
+    <script src="/build/bundle.js"></script>
   </body>
 </html>
