New homepage color scheme. Some routing basics.

--- a/index.html
+++ b/index.html
@@ -70,16 +70,12 @@
       html,
       body {
         height: 100%;
-        padding-top: 1em;
         background-color: #000;
-        background-color: #f2d308;
       }
 
       #root {
-        background-color: #f2d308;
-        /* background-color: #000; */
-        color: #3d3d3d;
-        /* color: #3d3d3d; */
+        background-color: #000;
+        color: rgba(242, 211, 8, 0.5);
         min-height: 100%;
         text-align: center;
       }
@@ -92,6 +88,7 @@
         margin-left: auto;
         margin-right: auto;
         width: 32em;
+        padding-top: 3em;
       }
 
       .constrained-header {
@@ -108,13 +105,22 @@
 
       h2 {
         text-align: left;
+        color: #f2d308;
+      }
+
+      .icon {
+        background-color: #f2d308;
+        margin: 0 1em 0 1em;
+        padding: 0.25em;
+        border: 1px solid #f2d308;
+        border-radius: 1em;
       }
     </style>
 
     <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/skeleton.css" />
+    <link rel="stylesheet" type="text/css" href="/css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="/css/skeleton.css" />
 
     <!-- start favicon -->
     <link rel="icon" type="image/png" href="img/favicon.png" />
