Fixed up some messy icon styling.

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
       .icon {
         background-color: #f2d308;
         margin: 0 1em 0 1em;
-        padding: 0.25em;
-        border: 1px solid #f2d308;
+        border: 1px solid #bea400;
         border-radius: 1em;
+        padding: 0.15em;
       }
     </style>
 
