Super fledgling workout page.

--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
         border-radius: 1em;
         padding: 0.15em;
       }
+
+      .video-js {
+        padding-top: 56.25%;
+      }
     </style>
 
     <!-- CSS
@@ -123,9 +127,13 @@
     <link rel="stylesheet" type="text/css" href="/css/skeleton.css" />
 
     <!-- start favicon -->
-    <link rel="icon" type="image/png" href="img/favicon.png" />
-
+    <link rel="icon" type="image/png" href="/img/favicon.png" />
     <!-- end favicon -->
+
+    <!-- start video player -->
+    <link href="//vjs.zencdn.net/7.8.2/video-js.min.css" rel="stylesheet" />
+    <!-- <script src="//vjs.zencdn.net/7.8.2/video.min.js"></script> -->
+    <!-- end video player -->
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
