Fixed build script to properly replace built workout pages.

--- a/workouts/10.html
+++ b/workouts/10.html
@@ -5,8 +5,22 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>tallyrye's Full Body Resistance Band Workout</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="Full Body Resistance Band Workout from @tallyrye: " />
+    <meta name="author" content="@tallyrye (EAT • TRAIN • HAPPY \nIntuitive + Health First Fitness 💛\n•  📚My book TRAIN HAPPY out now\n• 🎧 @trainhappypodcast \n• Fit & Fearless Podcast @thegirlgains)" />
+    <meta property="og:title" content="Full Body Resistance Band Workout from @tallyrye">
+    <meta property="og:description" content="I recommend using a band with a medium/ heavy or even x-heavy resistance! ⁣
+⁣
+🎧 SOUND ON for coaching tips!
+">
+    <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/8b56124d-8704-4afb-a75a-6eb73edd026a-composite-thumbnail.gif">
+    <meta property="og:url" content="https://verkout.com/workouts/10">
+    <meta name="twitter:title" content="Full Body Resistance Band Workout from @tallyrye">
+    <meta name="twitter:description" content="I recommend using a band with a medium/ heavy or even x-heavy resistance! ⁣
+⁣
+🎧 SOUND ON for coaching tips!
+">
+    <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/8b56124d-8704-4afb-a75a-6eb73edd026a-composite-thumbnail.gif">
+    <meta name="twitter:card" content="summary_large_image">
   
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -24,20 +38,56 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="/assets/css/normalize.css" />
     <link rel="stylesheet" href="/assets/css/skeleton.css" />
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/main.css" />    
+    <link rel="stylesheet" href="https://vjs.zencdn.net/7.8.3/video-js.min.css" />
   
     <!-- Scripts
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+      crossorigin="anonymous"></script> -->
   
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <body id="workout">
-      <div class="container">
-      <section>
-        <h2>Full Body Resistance Band Workout</h2>
-      </section>
+      <div class="container">        
+        <section class="clear">
+          <video
+            id="workout_video_player"
+            class="video-js vjs-default-skin vjs-fluid"
+            muted="muted"
+            
+            autoplay
+            loop
+            data-setup='{ "controls": false, "autoplay": true, "loop": true, "poster": "https://verkout-app-media.s3.amazonaws.com/images/468217408.jpg"}'
+          >
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/8b56124d-8704-4afb-a75a-6eb73edd026a-composite.mp4" type="video/mp4" />    
+            <p class="vjs-no-js">
+              To view this video please enable JavaScript, and consider upgrading to a
+              web browser that
+              <a href="https://videojs.com/html5-video-support/" target="_blank"
+                >supports HTML5 video</a
+              >
+            </p>
+          </video>
+        </section>
+        <section class="header">
+          <h4>Tally Rye</h4>          
+        </section>
+        <section class="description">
+          <h2>Full Body Resistance Band Workout</h2>
+          <h4>@tallyrye</h4>
+          <p>I recommend using a band with a medium/ heavy or even x-heavy resistance! ⁣
+⁣
+🎧 SOUND ON for coaching tips!
+</p>
+        </section>
     </div>
+
+    <script src="https://vjs.zencdn.net/7.8.3/video.js"></script>    
   </body>
+  
 </html>
