--- a/workouts/15.html
+++ b/workouts/15.html
@@ -5,8 +5,16 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>adaylorfit's 5️⃣0️⃣0️⃣ REP HIIT CHALLENGE 👊</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="5️⃣0️⃣0️⃣ REP HIIT CHALLENGE 👊 from @adaylorfit: " />
+    <meta name="author" content="@adaylorfit (🤓 We like Fitness and being weird\n💟 Body Confidence | Positive Vibes \n👀 6’3 | 5’3 \n📍 Kent 🌤\n⤵️ Links to save some💰)" />
+    <meta property="og:title" content="5️⃣0️⃣0️⃣ REP HIIT CHALLENGE 👊 from @adaylorfit">
+    <meta property="og:description" content="What better way to get your weekend started than jumping into a killer 500 rep HIIT workout 🙌 Grab some water (lots of it 😅), a yoga mat (or your choice of floor) and lets GET IT!! 🔥">
+    <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/8b5f51bd-8cd8-40ea-86eb-dd2a7cc060a9-composite-thumbnail.gif">
+    <meta property="og:url" content="https://verkout.com/workouts/15">
+    <meta name="twitter:title" content="5️⃣0️⃣0️⃣ REP HIIT CHALLENGE 👊 from @adaylorfit">
+    <meta name="twitter:description" content="What better way to get your weekend started than jumping into a killer 500 rep HIIT workout 🙌 Grab some water (lots of it 😅), a yoga mat (or your choice of floor) and lets GET IT!! 🔥">
+    <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/8b5f51bd-8cd8-40ea-86eb-dd2a7cc060a9-composite-thumbnail.gif">
+    <meta name="twitter:card" content="summary_large_image">
   
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -24,20 +32,53 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="/assets/css/normalize.css" />
     <link rel="stylesheet" href="/assets/css/skeleton.css" />
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/main.css" />    
+    <link rel="stylesheet" href="https://vjs.zencdn.net/7.8.3/video-js.min.css" />
   
     <!-- Scripts
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+      crossorigin="anonymous"></script> -->
   
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <body id="workout">
-      <div class="container">
-      <section>
-        <h2>5️⃣0️⃣0️⃣ REP HIIT CHALLENGE 👊</h2>
-      </section>
+      <div class="container">        
+        <section class="clear">
+          <video
+            id="workout_video_player"
+            class="video-js vjs-default-skin vjs-fluid"
+            muted="muted"
+            
+            autoplay
+            loop
+            data-setup='{ "controls": false, "autoplay": true, "loop": true, "poster": "https://verkout-app-media.s3.amazonaws.com/images/19283384088.jpg"}'
+          >
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/8b5f51bd-8cd8-40ea-86eb-dd2a7cc060a9-composite.mp4" type="video/mp4" />    
+            <p class="vjs-no-js">
+              To view this video please enable JavaScript, and consider upgrading to a
+              web browser that
+              <a href="https://videojs.com/html5-video-support/" target="_blank"
+                >supports HTML5 video</a
+              >
+            </p>
+          </video>
+        </section>
+        <section class="header">
+          <h4>Adam & Tay | FITNESS ⭐️</h4>          
+        </section>
+        <section class="description">
+          <h2>5️⃣0️⃣0️⃣ REP HIIT CHALLENGE 👊</h2>
+          <h4>@adaylorfit</h4>
+          <p>What better way to get your weekend started than jumping into a killer 500 rep HIIT workout 🙌 Grab some water (lots of it 😅), a yoga mat (or your choice of floor) and lets GET IT!! 🔥</p>
+        </section>
     </div>
+
+    <script src="https://vjs.zencdn.net/7.8.3/video.js"></script>    
   </body>
+  
 </html>
