--- a/workouts/19.html
+++ b/workouts/19.html
@@ -5,8 +5,18 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>primal.swoledier's Kettlebell and Bodyweight Burner</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="Kettlebell and Bodyweight Burner from @primal.swoledier: " />
+    <meta name="author" content="@primal.swoledier (‪ @onnit Kettlebell Coach \n🔥Subscribe to My Daily Workouts\n‪🔥Courses & Programs ‬\n👉🏽Follow @primal.methods\n👇🏽 8-Week Single Kettlebell Program)" />
+    <meta property="og:title" content="Kettlebell and Bodyweight Burner from @primal.swoledier">
+    <meta property="og:description" content="Get after this one in your next workout! I love hitting this one after a 20-30 minute run 🔥
+">
+    <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/d7282b2c-12c5-4a53-8d80-0f7d7a5ef4f8-composite-thumbnail.gif">
+    <meta property="og:url" content="https://verkout.com/workouts/19">
+    <meta name="twitter:title" content="Kettlebell and Bodyweight Burner from @primal.swoledier">
+    <meta name="twitter:description" content="Get after this one in your next workout! I love hitting this one after a 20-30 minute run 🔥
+">
+    <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/d7282b2c-12c5-4a53-8d80-0f7d7a5ef4f8-composite-thumbnail.gif">
+    <meta name="twitter:card" content="summary_large_image">
   
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -24,20 +34,54 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="/assets/css/normalize.css" />
     <link rel="stylesheet" href="/assets/css/skeleton.css" />
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/main.css" />    
+    <link rel="stylesheet" href="https://vjs.zencdn.net/7.8.3/video-js.min.css" />
   
     <!-- Scripts
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+      crossorigin="anonymous"></script> -->
   
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <body id="workout">
-      <div class="container">
-      <section>
-        <h2>Kettlebell and Bodyweight Burner</h2>
-      </section>
+      <div class="container">        
+        <section class="clear">
+          <video
+            id="workout_video_player"
+            class="video-js vjs-default-skin vjs-fluid"
+            muted="muted"
+            
+            autoplay
+            loop
+            data-setup='{ "controls": false, "autoplay": true, "loop": true, "poster": "https://verkout-app-media.s3.amazonaws.com/images/1426793957.jpg"}'
+          >
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/d7282b2c-12c5-4a53-8d80-0f7d7a5ef4f8-composite.mp4" type="video/mp4" />    
+            <p class="vjs-no-js">
+              To view this video please enable JavaScript, and consider upgrading to a
+              web browser that
+              <a href="https://videojs.com/html5-video-support/" target="_blank"
+                >supports HTML5 video</a
+              >
+            </p>
+          </video>
+        </section>
+        <section class="header">
+          <h4>Eric Leija</h4>          
+        </section>
+        <section class="description">
+          <h2>Kettlebell and Bodyweight Burner</h2>
+          <h4>@primal.swoledier</h4>
+          <p>Get after this one in your next workout! I love hitting this one after a 20-30 minute run 🔥
+</p>
+        </section>
     </div>
+
+    <script src="https://vjs.zencdn.net/7.8.3/video.js"></script>    
   </body>
+  
 </html>
