--- a/workouts/8.html
+++ b/workouts/8.html
@@ -5,8 +5,16 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>natacha.oceane's FULL BODY work-every-muscle</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="FULL BODY work-every-muscle from @natacha.oceane: " />
+    <meta name="author" content="@natacha.oceane (👩‍🎓 Biophysicist @ UCL 🧬\n🏃‍♀️ IronMan & Sprinter\n🦈 Gymshark 🎥 Translating science on YouTube\nMy programmes approved by GB Olympic expert ⬇️)" />
+    <meta property="og:title" content="FULL BODY work-every-muscle from @natacha.oceane">
+    <meta property="og:description" content="We’ve got 6 movements hitting the lower body, upper body + core = a happy mind and lots of feel good when it’s all done.">
+    <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/c8585faa-3037-4fbf-a023-51a912ece18f-composite-thumbnail.gif">
+    <meta property="og:url" content="https://verkout.com/workouts/8">
+    <meta name="twitter:title" content="FULL BODY work-every-muscle from @natacha.oceane">
+    <meta name="twitter:description" content="We’ve got 6 movements hitting the lower body, upper body + core = a happy mind and lots of feel good when it’s all done.">
+    <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/c8585faa-3037-4fbf-a023-51a912ece18f-composite-thumbnail.gif">
+    <meta name="twitter:card" content="summary_large_image">
   
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -24,20 +32,53 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="/assets/css/normalize.css" />
     <link rel="stylesheet" href="/assets/css/skeleton.css" />
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/main.css" />    
+    <link rel="stylesheet" href="https://vjs.zencdn.net/7.8.3/video-js.min.css" />
   
     <!-- Scripts
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+      crossorigin="anonymous"></script> -->
   
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <body id="workout">
-      <div class="container">
-      <section>
-        <h2>FULL BODY work-every-muscle</h2>
-      </section>
+      <div class="container">        
+        <section class="clear">
+          <video
+            id="workout_video_player"
+            class="video-js vjs-default-skin vjs-fluid"
+            muted="muted"
+            
+            autoplay
+            loop
+            data-setup='{ "controls": false, "autoplay": true, "loop": true, "poster": "https://verkout-app-media.s3.amazonaws.com/images/1967316049.jpg"}'
+          >
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/c8585faa-3037-4fbf-a023-51a912ece18f-composite.mp4" type="video/mp4" />    
+            <p class="vjs-no-js">
+              To view this video please enable JavaScript, and consider upgrading to a
+              web browser that
+              <a href="https://videojs.com/html5-video-support/" target="_blank"
+                >supports HTML5 video</a
+              >
+            </p>
+          </video>
+        </section>
+        <section class="header">
+          <h4>Natacha Oceane</h4>          
+        </section>
+        <section class="description">
+          <h2>FULL BODY work-every-muscle</h2>
+          <h4>@natacha.oceane</h4>
+          <p>We’ve got 6 movements hitting the lower body, upper body + core = a happy mind and lots of feel good when it’s all done.</p>
+        </section>
     </div>
+
+    <script src="https://vjs.zencdn.net/7.8.3/video.js"></script>    
   </body>
+  
 </html>
