--- a/workouts/11.html
+++ b/workouts/11.html
@@ -5,8 +5,16 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>laurabiceps's DB DT Conditioning Finisher</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="DB DT Conditioning Finisher from @laurabiceps: " />
+    <meta name="author" content="@laurabiceps (🏋🏼‍♀️ PT @foundryfit \n📖 No1. Best-selling Author ‘LIFT YOURSELF’\n🎙 Podcast ‘Biceps & Banter’\n🙋🏼‍♀️ TEAM LIFTED Online Coaching\n📱 Trainer @fiit)" />
+    <meta property="og:title" content="DB DT Conditioning Finisher from @laurabiceps">
+    <meta property="og:description" content="As we continue to try and make waves with limited kit at home, I’ve spent a lot of my time doing higher rep, more conditioning style work.">
+    <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/5462f41c-b458-4d35-aabf-83db42478930-composite-thumbnail.gif">
+    <meta property="og:url" content="https://verkout.com/workouts/11">
+    <meta name="twitter:title" content="DB DT Conditioning Finisher from @laurabiceps">
+    <meta name="twitter:description" content="As we continue to try and make waves with limited kit at home, I’ve spent a lot of my time doing higher rep, more conditioning style work.">
+    <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/5462f41c-b458-4d35-aabf-83db42478930-composite-thumbnail.gif">
+    <meta name="twitter:card" content="summary_large_image">
   
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -24,20 +32,53 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="/assets/css/normalize.css" />
     <link rel="stylesheet" href="/assets/css/skeleton.css" />
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/main.css" />    
+    <link rel="stylesheet" href="https://vjs.zencdn.net/7.8.3/video-js.min.css" />
   
     <!-- Scripts
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+      crossorigin="anonymous"></script> -->
   
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <body id="workout">
-      <div class="container">
-      <section>
-        <h2>DB DT Conditioning Finisher</h2>
-      </section>
+      <div class="container">        
+        <section class="clear">
+          <video
+            id="workout_video_player"
+            class="video-js vjs-default-skin vjs-fluid"
+            muted="muted"
+            
+            autoplay
+            loop
+            data-setup='{ "controls": false, "autoplay": true, "loop": true, "poster": "https://verkout-app-media.s3.amazonaws.com/images/195101119.jpg"}'
+          >
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/5462f41c-b458-4d35-aabf-83db42478930-composite.mp4" type="video/mp4" />    
+            <p class="vjs-no-js">
+              To view this video please enable JavaScript, and consider upgrading to a
+              web browser that
+              <a href="https://videojs.com/html5-video-support/" target="_blank"
+                >supports HTML5 video</a
+              >
+            </p>
+          </video>
+        </section>
+        <section class="header">
+          <h4>Laura ‘Biceps’</h4>          
+        </section>
+        <section class="description">
+          <h2>DB DT Conditioning Finisher</h2>
+          <h4>@laurabiceps</h4>
+          <p>As we continue to try and make waves with limited kit at home, I’ve spent a lot of my time doing higher rep, more conditioning style work.</p>
+        </section>
     </div>
+
+    <script src="https://vjs.zencdn.net/7.8.3/video.js"></script>    
   </body>
+  
 </html>
