--- a/workouts/13.html
+++ b/workouts/13.html
@@ -5,8 +5,18 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>fitmoral's NO EQUIPMENT HIIT</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="NO EQUIPMENT HIIT from @fitmoral: " />
+    <meta name="author" content="@fitmoral (👟 Sportswear Brand @deltawoos \n📡 Advertising Agency @leadsnetwork.io\n🍵 Smoothie Detox @tastesmoothies\n⬇️ Shoutouts and Campaign Plannings on IG ⬇️)" />
+    <meta property="og:title" content="NO EQUIPMENT HIIT from @fitmoral">
+    <meta property="og:description" content="Here’s a quick hiit workout that’ll get you sweaty real quick! super fun, super effective 🔥
+">
+    <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/e8ed580d-b482-4153-ac2c-a9209a61e40c-composite-thumbnail.gif">
+    <meta property="og:url" content="https://verkout.com/workouts/13">
+    <meta name="twitter:title" content="NO EQUIPMENT HIIT from @fitmoral">
+    <meta name="twitter:description" content="Here’s a quick hiit workout that’ll get you sweaty real quick! super fun, super effective 🔥
+">
+    <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/e8ed580d-b482-4153-ac2c-a9209a61e40c-composite-thumbnail.gif">
+    <meta name="twitter:card" content="summary_large_image">
   
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -24,20 +34,54 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="/assets/css/normalize.css" />
     <link rel="stylesheet" href="/assets/css/skeleton.css" />
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/main.css" />    
+    <link rel="stylesheet" href="https://vjs.zencdn.net/7.8.3/video-js.min.css" />
   
     <!-- Scripts
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+      crossorigin="anonymous"></script> -->
   
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <body id="workout">
-      <div class="container">
-      <section>
-        <h2>NO EQUIPMENT HIIT</h2>
-      </section>
+      <div class="container">        
+        <section class="clear">
+          <video
+            id="workout_video_player"
+            class="video-js vjs-default-skin vjs-fluid"
+            muted="muted"
+            
+            autoplay
+            loop
+            data-setup='{ "controls": false, "autoplay": true, "loop": true, "poster": "https://verkout-app-media.s3.amazonaws.com/images/6648540058.jpg"}'
+          >
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/e8ed580d-b482-4153-ac2c-a9209a61e40c-composite.mp4" type="video/mp4" />    
+            <p class="vjs-no-js">
+              To view this video please enable JavaScript, and consider upgrading to a
+              web browser that
+              <a href="https://videojs.com/html5-video-support/" target="_blank"
+                >supports HTML5 video</a
+              >
+            </p>
+          </video>
+        </section>
+        <section class="header">
+          <h4>Fit Moral™ | Fitness</h4>          
+        </section>
+        <section class="description">
+          <h2>NO EQUIPMENT HIIT</h2>
+          <h4>@fitmoral</h4>
+          <p>Here’s a quick hiit workout that’ll get you sweaty real quick! super fun, super effective 🔥
+</p>
+        </section>
     </div>
+
+    <script src="https://vjs.zencdn.net/7.8.3/video.js"></script>    
   </body>
+  
 </html>
