--- a/workouts/14.html
+++ b/workouts/14.html
@@ -5,8 +5,16 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>niknaidoo's ARMS 🔥</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="ARMS 🔥 from @niknaidoo: " />
+    <meta name="author" content="@niknaidoo (💻 Online Lifestyle Coach\nSenior Instructor @barrysuk\nTrainer @underarmouruk \n🎙 Alive Present & Strong Podcast\n#alivepresentstrong\nSign up now 👇🏼)" />
+    <meta property="og:title" content="ARMS 🔥 from @niknaidoo">
+    <meta property="og:description" content="Another simple EMOM (every minute on the minute) workout. No breaks in between sections, straight into the next, get your equipment all ready to go.⁣">
+    <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/951a27db-70e0-459e-b943-fabc4419fe5e-composite-thumbnail.gif">
+    <meta property="og:url" content="https://verkout.com/workouts/14">
+    <meta name="twitter:title" content="ARMS 🔥 from @niknaidoo">
+    <meta name="twitter:description" content="Another simple EMOM (every minute on the minute) workout. No breaks in between sections, straight into the next, get your equipment all ready to go.⁣">
+    <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/951a27db-70e0-459e-b943-fabc4419fe5e-composite-thumbnail.gif">
+    <meta name="twitter:card" content="summary_large_image">
   
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -24,20 +32,53 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="/assets/css/normalize.css" />
     <link rel="stylesheet" href="/assets/css/skeleton.css" />
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/main.css" />    
+    <link rel="stylesheet" href="https://vjs.zencdn.net/7.8.3/video-js.min.css" />
   
     <!-- Scripts
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+      crossorigin="anonymous"></script> -->
   
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <body id="workout">
-      <div class="container">
-      <section>
-        <h2>ARMS 🔥</h2>
-      </section>
+      <div class="container">        
+        <section class="clear">
+          <video
+            id="workout_video_player"
+            class="video-js vjs-default-skin vjs-fluid"
+            muted="muted"
+            
+            autoplay
+            loop
+            data-setup='{ "controls": false, "autoplay": true, "loop": true, "poster": "https://verkout-app-media.s3.amazonaws.com/images/53074968.jpg"}'
+          >
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/951a27db-70e0-459e-b943-fabc4419fe5e-composite.mp4" type="video/mp4" />    
+            <p class="vjs-no-js">
+              To view this video please enable JavaScript, and consider upgrading to a
+              web browser that
+              <a href="https://videojs.com/html5-video-support/" target="_blank"
+                >supports HTML5 video</a
+              >
+            </p>
+          </video>
+        </section>
+        <section class="header">
+          <h4>Nik Naidoo - Health & Fitness</h4>          
+        </section>
+        <section class="description">
+          <h2>ARMS 🔥</h2>
+          <h4>@niknaidoo</h4>
+          <p>Another simple EMOM (every minute on the minute) workout. No breaks in between sections, straight into the next, get your equipment all ready to go.⁣</p>
+        </section>
     </div>
+
+    <script src="https://vjs.zencdn.net/7.8.3/video.js"></script>    
   </body>
+  
 </html>
