--- a/workouts/16.html
+++ b/workouts/16.html
@@ -5,8 +5,16 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>miap_fit's BACK AND BIS WORKOUT 💪🏼</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="BACK AND BIS WORKOUT 💪🏼 from @miap_fit: " />
+    <meta name="author" content="@miap_fit (23 🙋🏼‍♀️\nBristol UK 📍\nWorkouts | Meal Ideas | Progress Pics 💪🏼\nHere to motivate and promote a positive journey 🌸)" />
+    <meta property="og:title" content="BACK AND BIS WORKOUT 💪🏼 from @miap_fit">
+    <meta property="og:description" content="I’m not too keen on working back so I’ve been training it with biceps (which I love) recently to enjoy it more 😊">
+    <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/ee2af7a5-d856-4502-8a11-07e1806f35b1-composite-thumbnail.gif">
+    <meta property="og:url" content="https://verkout.com/workouts/16">
+    <meta name="twitter:title" content="BACK AND BIS WORKOUT 💪🏼 from @miap_fit">
+    <meta name="twitter:description" content="I’m not too keen on working back so I’ve been training it with biceps (which I love) recently to enjoy it more 😊">
+    <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/ee2af7a5-d856-4502-8a11-07e1806f35b1-composite-thumbnail.gif">
+    <meta name="twitter:card" content="summary_large_image">
   
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -24,20 +32,53 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="/assets/css/normalize.css" />
     <link rel="stylesheet" href="/assets/css/skeleton.css" />
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/main.css" />    
+    <link rel="stylesheet" href="https://vjs.zencdn.net/7.8.3/video-js.min.css" />
   
     <!-- Scripts
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+      crossorigin="anonymous"></script> -->
   
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <body id="workout">
-      <div class="container">
-      <section>
-        <h2>BACK AND BIS WORKOUT 💪🏼</h2>
-      </section>
+      <div class="container">        
+        <section class="clear">
+          <video
+            id="workout_video_player"
+            class="video-js vjs-default-skin vjs-fluid"
+            muted="muted"
+            
+            autoplay
+            loop
+            data-setup='{ "controls": false, "autoplay": true, "loop": true, "poster": "https://verkout-app-media.s3.amazonaws.com/images/32506946512.jpg"}'
+          >
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/ee2af7a5-d856-4502-8a11-07e1806f35b1-composite.mp4" type="video/mp4" />    
+            <p class="vjs-no-js">
+              To view this video please enable JavaScript, and consider upgrading to a
+              web browser that
+              <a href="https://videojs.com/html5-video-support/" target="_blank"
+                >supports HTML5 video</a
+              >
+            </p>
+          </video>
+        </section>
+        <section class="header">
+          <h4>Mia 🌸</h4>          
+        </section>
+        <section class="description">
+          <h2>BACK AND BIS WORKOUT 💪🏼</h2>
+          <h4>@miap_fit</h4>
+          <p>I’m not too keen on working back so I’ve been training it with biceps (which I love) recently to enjoy it more 😊</p>
+        </section>
     </div>
+
+    <script src="https://vjs.zencdn.net/7.8.3/video.js"></script>    
   </body>
+  
 </html>
