--- a/workouts/18.html
+++ b/workouts/18.html
@@ -5,8 +5,18 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>hiitburn's ARMS 💪 & LEGS 🔥⁣⁣</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="ARMS 💪 & LEGS 🔥⁣⁣ from @hiitburn: " />
+    <meta name="author" content="@hiitburn (🔥High Intensity Workouts\n💡Co-Founders Dennis + Kelsey\n💕Coach: @thedailykelsey \n👇GET TONED & DEFINED🔥)" />
+    <meta property="og:title" content="ARMS 💪 & LEGS 🔥⁣⁣ from @hiitburn">
+    <meta property="og:description" content="If you need to get in some movement, this is the workout for you! It hits both your upper and lower body, so let’s get it 🔥⁣⁣ Rest as needed.
+">
+    <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/2ea153b0-f7cb-43f5-ab07-648b9652b034-composite-thumbnail.gif">
+    <meta property="og:url" content="https://verkout.com/workouts/18">
+    <meta name="twitter:title" content="ARMS 💪 & LEGS 🔥⁣⁣ from @hiitburn">
+    <meta name="twitter:description" content="If you need to get in some movement, this is the workout for you! It hits both your upper and lower body, so let’s get it 🔥⁣⁣ Rest as needed.
+">
+    <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/2ea153b0-f7cb-43f5-ab07-648b9652b034-composite-thumbnail.gif">
+    <meta name="twitter:card" content="summary_large_image">
   
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -24,20 +34,54 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="/assets/css/normalize.css" />
     <link rel="stylesheet" href="/assets/css/skeleton.css" />
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/main.css" />    
+    <link rel="stylesheet" href="https://vjs.zencdn.net/7.8.3/video-js.min.css" />
   
     <!-- Scripts
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+      crossorigin="anonymous"></script> -->
   
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <body id="workout">
-      <div class="container">
-      <section>
-        <h2>ARMS 💪 & LEGS 🔥⁣⁣</h2>
-      </section>
+      <div class="container">        
+        <section class="clear">
+          <video
+            id="workout_video_player"
+            class="video-js vjs-default-skin vjs-fluid"
+            muted="muted"
+            
+            autoplay
+            loop
+            data-setup='{ "controls": false, "autoplay": true, "loop": true, "poster": "https://verkout-app-media.s3.amazonaws.com/images/1948126538.jpg"}'
+          >
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/2ea153b0-f7cb-43f5-ab07-648b9652b034-composite.mp4" type="video/mp4" />    
+            <p class="vjs-no-js">
+              To view this video please enable JavaScript, and consider upgrading to a
+              web browser that
+              <a href="https://videojs.com/html5-video-support/" target="_blank"
+                >supports HTML5 video</a
+              >
+            </p>
+          </video>
+        </section>
+        <section class="header">
+          <h4>✨Lifestyle Fitness✨</h4>          
+        </section>
+        <section class="description">
+          <h2>ARMS 💪 & LEGS 🔥⁣⁣</h2>
+          <h4>@hiitburn</h4>
+          <p>If you need to get in some movement, this is the workout for you! It hits both your upper and lower body, so let’s get it 🔥⁣⁣ Rest as needed.
+</p>
+        </section>
     </div>
+
+    <script src="https://vjs.zencdn.net/7.8.3/video.js"></script>    
   </body>
+  
 </html>
