--- a/workouts/20.html
+++ b/workouts/20.html
@@ -5,8 +5,16 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>tay_macfit's No Equipment Cardio + Core</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="No Equipment Cardio + Core from @tay_macfit: " />
+    <meta name="author" content="@tay_macfit (MACFIT, Quick & Effective Workouts. \n• BS in Public Health & CPT through ACE\n#iam1stphorm\n@ptulaactive TAYLOR)" />
+    <meta property="og:title" content="No Equipment Cardio + Core from @tay_macfit">
+    <meta property="og:description" content="A body weight workout to get that heart rate up followed by some abs! This one is so so good.">
+    <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/9df5d86d-5311-4b15-90ef-4443bc6d91d3-composite-thumbnail.gif">
+    <meta property="og:url" content="https://verkout.com/workouts/20">
+    <meta name="twitter:title" content="No Equipment Cardio + Core from @tay_macfit">
+    <meta name="twitter:description" content="A body weight workout to get that heart rate up followed by some abs! This one is so so good.">
+    <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/9df5d86d-5311-4b15-90ef-4443bc6d91d3-composite-thumbnail.gif">
+    <meta name="twitter:card" content="summary_large_image">
   
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -24,20 +32,53 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="/assets/css/normalize.css" />
     <link rel="stylesheet" href="/assets/css/skeleton.css" />
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/main.css" />    
+    <link rel="stylesheet" href="https://vjs.zencdn.net/7.8.3/video-js.min.css" />
   
     <!-- Scripts
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+      crossorigin="anonymous"></script> -->
   
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <body id="workout">
-      <div class="container">
-      <section>
-        <h2>No Equipment Cardio + Core</h2>
-      </section>
+      <div class="container">        
+        <section class="clear">
+          <video
+            id="workout_video_player"
+            class="video-js vjs-default-skin vjs-fluid"
+            muted="muted"
+            
+            autoplay
+            loop
+            data-setup='{ "controls": false, "autoplay": true, "loop": true, "poster": "https://verkout-app-media.s3.amazonaws.com/images/11209990018.jpg"}'
+          >
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/9df5d86d-5311-4b15-90ef-4443bc6d91d3-composite.mp4" type="video/mp4" />    
+            <p class="vjs-no-js">
+              To view this video please enable JavaScript, and consider upgrading to a
+              web browser that
+              <a href="https://videojs.com/html5-video-support/" target="_blank"
+                >supports HTML5 video</a
+              >
+            </p>
+          </video>
+        </section>
+        <section class="header">
+          <h4>TAYLOR MCALLISTER</h4>          
+        </section>
+        <section class="description">
+          <h2>No Equipment Cardio + Core</h2>
+          <h4>@tay_macfit</h4>
+          <p>A body weight workout to get that heart rate up followed by some abs! This one is so so good.</p>
+        </section>
     </div>
+
+    <script src="https://vjs.zencdn.net/7.8.3/video.js"></script>    
   </body>
+  
 </html>
