--- a/workouts/22.html
+++ b/workouts/22.html
@@ -5,8 +5,16 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>brickbuiltstrength's BRICKBUILT WEEKEND CORE WORKOUT!</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="BRICKBUILT WEEKEND CORE WORKOUT! from @brickbuiltstrength: " />
+    <meta name="author" content="@brickbuiltstrength (An online based company with personalized programming to change the look,feel and performance for your body from elite coaching. DM for more info 📲💻)" />
+    <meta property="og:title" content="BRICKBUILT WEEKEND CORE WORKOUT! from @brickbuiltstrength">
+    <meta property="og:description" content="In our programming we train some form of core everyday, it is a foundational piece in our progression!">
+    <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/79503455-2387-4a19-bd16-ff7019577d9d-composite-thumbnail.gif">
+    <meta property="og:url" content="https://verkout.com/workouts/22">
+    <meta name="twitter:title" content="BRICKBUILT WEEKEND CORE WORKOUT! from @brickbuiltstrength">
+    <meta name="twitter:description" content="In our programming we train some form of core everyday, it is a foundational piece in our progression!">
+    <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/79503455-2387-4a19-bd16-ff7019577d9d-composite-thumbnail.gif">
+    <meta name="twitter:card" content="summary_large_image">
   
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -24,20 +32,53 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="/assets/css/normalize.css" />
     <link rel="stylesheet" href="/assets/css/skeleton.css" />
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/main.css" />    
+    <link rel="stylesheet" href="https://vjs.zencdn.net/7.8.3/video-js.min.css" />
   
     <!-- Scripts
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+      crossorigin="anonymous"></script> -->
   
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <body id="workout">
-      <div class="container">
-      <section>
-        <h2>BRICKBUILT WEEKEND CORE WORKOUT!</h2>
-      </section>
+      <div class="container">        
+        <section class="clear">
+          <video
+            id="workout_video_player"
+            class="video-js vjs-default-skin vjs-fluid"
+            muted="muted"
+            
+            autoplay
+            loop
+            data-setup='{ "controls": false, "autoplay": true, "loop": true, "poster": "https://verkout-app-media.s3.amazonaws.com/images/6936520616.jpg"}'
+          >
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/79503455-2387-4a19-bd16-ff7019577d9d-composite.mp4" type="video/mp4" />    
+            <p class="vjs-no-js">
+              To view this video please enable JavaScript, and consider upgrading to a
+              web browser that
+              <a href="https://videojs.com/html5-video-support/" target="_blank"
+                >supports HTML5 video</a
+              >
+            </p>
+          </video>
+        </section>
+        <section class="header">
+          <h4>Brick Built Strength</h4>          
+        </section>
+        <section class="description">
+          <h2>BRICKBUILT WEEKEND CORE WORKOUT!</h2>
+          <h4>@brickbuiltstrength</h4>
+          <p>In our programming we train some form of core everyday, it is a foundational piece in our progression!</p>
+        </section>
     </div>
+
+    <script src="https://vjs.zencdn.net/7.8.3/video.js"></script>    
   </body>
+  
 </html>
