--- a/workouts/9.html
+++ b/workouts/9.html
@@ -5,8 +5,16 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>paulsklarxfit's Kettlebell Flow</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="Kettlebell Flow from @paulsklarxfit: " />
+    <meta name="author" content="@paulsklarxfit (Professional Trainer \nFormer World Ranked Pro Duathlete\nOwner @prescriptive.fitness\n@sandysklarxfit \n⬇️SUBSCRIBE to PaulSklarXFit365 ⬇️)" />
+    <meta property="og:title" content="Kettlebell Flow from @paulsklarxfit">
+    <meta property="og:description" content="Looking for some Cardio, Mobility, and Muscle all wrapped up into one? ⁣Try this Kettlebell Flow by itself or at the end of any workout🔥">
+    <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/2562bd2d-4e8c-4f93-afab-813bb4e180df-composite-thumbnail.gif">
+    <meta property="og:url" content="https://verkout.com/workouts/9">
+    <meta name="twitter:title" content="Kettlebell Flow from @paulsklarxfit">
+    <meta name="twitter:description" content="Looking for some Cardio, Mobility, and Muscle all wrapped up into one? ⁣Try this Kettlebell Flow by itself or at the end of any workout🔥">
+    <meta name="twitter:image" content="https://verkout-app-media.s3.amazonaws.com/images/2562bd2d-4e8c-4f93-afab-813bb4e180df-composite-thumbnail.gif">
+    <meta name="twitter:card" content="summary_large_image">
   
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -24,20 +32,53 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="/assets/css/normalize.css" />
     <link rel="stylesheet" href="/assets/css/skeleton.css" />
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/main.css" />    
+    <link rel="stylesheet" href="https://vjs.zencdn.net/7.8.3/video-js.min.css" />
   
     <!-- Scripts
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+      crossorigin="anonymous"></script> -->
   
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <body id="workout">
-      <div class="container">
-      <section>
-        <h2>Kettlebell Flow</h2>
-      </section>
+      <div class="container">        
+        <section class="clear">
+          <video
+            id="workout_video_player"
+            class="video-js vjs-default-skin vjs-fluid"
+            muted="muted"
+            
+            autoplay
+            loop
+            data-setup='{ "controls": false, "autoplay": true, "loop": true, "poster": "https://verkout-app-media.s3.amazonaws.com/images/3231385713.jpg"}'
+          >
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/2562bd2d-4e8c-4f93-afab-813bb4e180df-composite.mp4" type="video/mp4" />    
+            <p class="vjs-no-js">
+              To view this video please enable JavaScript, and consider upgrading to a
+              web browser that
+              <a href="https://videojs.com/html5-video-support/" target="_blank"
+                >supports HTML5 video</a
+              >
+            </p>
+          </video>
+        </section>
+        <section class="header">
+          <h4>Paul Sklar</h4>          
+        </section>
+        <section class="description">
+          <h2>Kettlebell Flow</h2>
+          <h4>@paulsklarxfit</h4>
+          <p>Looking for some Cardio, Mobility, and Muscle all wrapped up into one? ⁣Try this Kettlebell Flow by itself or at the end of any workout🔥</p>
+        </section>
     </div>
+
+    <script src="https://vjs.zencdn.net/7.8.3/video.js"></script>    
   </body>
+  
 </html>
